# docs/swagger/peak_pal.swagger.json
@@ -11,7 +11,7 @@
   },
   "tags": [
     {
-      "name": "CarpoolServer"
+      "name": "Carpool"
     }
   ],
   "consumes": [
@@ -21,16 +21,16 @@
     "application/json"
   ],
   "paths": {
-    "/v1/create_carpool": {
+    "/v1/create_trip": {
       "post": {
-        "summary": "Create new carpool",
-        "description": "Use this API to create a carpool record",
-        "operationId": "CarpoolServer_CreateCarpool",
+        "summary": "Create new Trip",
+        "description": "Use this API to create a trip record",
+        "operationId": "Carpool_CreateTrip",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pbCreateCarpoolResponse"
+              "$ref": "#/definitions/pbCreateTripResponse"
             }
           },
           "default": {
@@ -46,18 +46,63 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/pbCreateCarpoolRequest"
+              "$ref": "#/definitions/pbCreateTripRequest"
             }
           }
         ],
         "tags": [
-          "CarpoolServer"
+          "Carpool"
         ]
       }
     }
   },
   "definitions": {
-    "pbCarpool": {
+    "pbCreateTripRequest": {
+      "type": "object",
+      "properties": {
+        "contactInfo": {
+          "type": "string"
+        },
+        "driverId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "maxPassenger": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "price": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "ablePickUp": {
+          "type": "boolean"
+        },
+        "resortId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "acceptPaymentType": {
+          "type": "string"
+        },
+        "currency": {
+          "type": "string"
+        },
+        "departureAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "pbCreateTripResponse": {
+      "type": "object",
+      "properties": {
+        "trip": {
+          "$ref": "#/definitions/pbTrip"
+        }
+      }
+    },
+    "pbTrip": {
       "type": "object",
       "properties": {
         "ID": {
@@ -99,51 +144,6 @@
         "createdAt": {
           "type": "string",
           "format": "date-time"
-        }
-      }
-    },
-    "pbCreateCarpoolRequest": {
-      "type": "object",
-      "properties": {
-        "contactInfo": {
-          "type": "string"
-        },
-        "driverId": {
-          "type": "string",
-          "format": "int64"
-        },
-        "maxPassenger": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "price": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "ablePickUp": {
-          "type": "boolean"
-        },
-        "resortId": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "acceptPaymentType": {
-          "type": "string"
-        },
-        "currency": {
-          "type": "string"
-        },
-        "departureAt": {
-          "type": "string",
-          "format": "date-time"
-        }
-      }
-    },
-    "pbCreateCarpoolResponse": {
-      "type": "object",
-      "properties": {
-        "carpool": {
-          "$ref": "#/definitions/pbCarpool"
         }
       }
     },
